--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     </head>
     <body>
         <h1>Move using WASD</h1>
-        <div id="map"></div>
+        <div class="grid-container">
+            <div id="map"></div>
+            <div id="detailed-map"></div>
+        </div>
+        
         <script src="src/app.js"></script>
     </body>
     
